2000-08-20  Michael Widenius  <monty@mysql.com>

* Added memory as inline functions to THD to get them a bit faster
* Don't count entries with NULL in COUNT(DISTINCT ..)

2000-08-08  Michael Widenius  <monty@mysql.com>

* Changed ALTER TABLE and LOAD DATA INFILE to create non unique, small keys
  after all rows are inserted.
* Fixed use of UDF function with const arguments in WHERE clause.

2000-07-11  Michael Widenius  <monty@mysql.com>

* Extended safe_mysqld;  Patch by Christian Hammers

2000-07-04  Michael Widenius  <monty@mysql.com>

* Changed the update log to take the query length argument; This
  should make the update log \0 safe.

2000-06-21  Michael Widenius  <monty@mysql.com>

* Added net_read_timeout and net_write_timeout as startup parameters to mysqld

2000-06-19  Michael Widenius  <monty@mysql.com>

* Changed the copyright of MySQL to GPL and LGPL.
* Added myisampack and pack_isam to the MySQL distribution.

2000-06-01  Michael Widenius  <monty@mysql.com>

* Added "FLUSH TABLES WITH READ LOCK" command

2000-05-31  Michael Widenius  <monty@mysql.com>

* Added table locks to Berkeley DB.

2000-05-28  Michael Widenius  <monty@mysql.com>

* Allow ON and USING with INNER JOIN.

2000-05-23  Sasha

* Fix that USE INDEX with 'PRIMARY' keys works.

2000-05-20  Michael Widenius  <monty@tik.pp.sci.fi>

* Added symbolic links support for Win32.

2000-05-19  Michael Widenius  <monty@tik.pp.sci.fi>

* Changed protocol to let client know if the server is in AUTOCOMMIT mode
  and if there is a pending transaction.  If there is a pending transaction
  the client library will give an error before reconnecting to the server to
  let the client know that the server did a rollback.
  The protocol is still backward compatible with old clients
* 'kill' now works on a thread that is locked on a 'write' to a dead client.

2000-05-18  Michael Widenius  <monty@tik.pp.sci.fi>

* unlock tables before sending last packet of SELECT ... result to client.
